[gd_scene load_steps=3 format=3 uid="uid://ikdj38sp720t"]

[ext_resource type="Script" uid="uid://cy672nwjno72q" path="res://Scripts/UpgradeRooms/base_upgrade_room.gd" id="1_w4h07"]
[ext_resource type="PackedScene" uid="uid://bsgtw3utn2dwk" path="res://HexButton.tscn" id="3_s0t4n"]

[node name="UpgradeRoom" type="Control"]
custom_minimum_size = Vector2(300, 300)
layout_mode = 3
anchors_preset = 0
offset_right = 300.0
offset_bottom = 300.0
mouse_filter = 1
script = ExtResource("1_w4h07")

[node name="Polygon2D" type="Polygon2D" parent="."]
z_index = -1

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/CenterContainer"]
custom_minimum_size = Vector2(220, 0)
layout_mode = 2
theme_override_constants/separation = 10

[node name="NameLabel" type="Label" parent="MarginContainer/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Room Name"
horizontal_alignment = 1

[node name="LevelLabel" type="Label" parent="MarginContainer/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Level: X"
horizontal_alignment = 1

[node name="EffectLabel" type="Label" parent="MarginContainer/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Effect: TBD"
horizontal_alignment = 1
autowrap_mode = 3

[node name="UpgradeButton" parent="MarginContainer/CenterContainer/VBoxContainer" instance=ExtResource("3_s0t4n")]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
text = "Upgrade"

[node name="DemolishButton" parent="MarginContainer/CenterContainer/VBoxContainer" instance=ExtResource("3_s0t4n")]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
text = "Demolish"
